@@ -1,5 +1,4 @@
 /* Do not edit this file.  It is created by a code generator. */
-// TODO: this has been modified, removed small data
 
 #include "Translator/TypeAliases.h"
 
