@@ -11,6 +11,12 @@ Package author: David A. Schneider
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+Tag: V00-02-10
+2015-2-3 David Schneider
+- clean up issue with modifiying generated code to exclude small data.
+  Wrote new ddl_Translator driver script that excludes it.
+- support DEVEL as well. Track JIRA PSAS-103
+
 Tag: V00-02-09
 2015-2-2 David Schneider
 - regenerate for new pdsdata 8.2.2 with EBeamV7 fix. Also OceanOptics DataV3 and 
